# TeamReplayFinder

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  Pipfile  README.rst  add_matches.py  current_teams.bsh  current_teams.ps1  download.py  download_teams.ps1  get_drafts.py  get_info.py  load_old_teams.py  match_draft.py  pyproject.toml  query_teams.py  redownload.py  setup.cfg  setup.py  team_parse.py  team_parse_datdota.py  team_parse_stratz.py  update_heroes.py  update_sources.py  util.py
alembic/: env.py
alembic/versions/: 5776cd8b9a7f_initial_with_hybrid_replay_stack_id.py  aa61c2068005_made_stack_id_a_string_instead_of_a_.py
docs/: conf.py  index.rst
odota/: odota_player.py
replay_finder/: HeroTools.py  __init__.py  api_usage.py  dota2_api.py  exceptions.py  league.py  match_draft.py  model.py  replay_process.py  team_info.py
src/TeamReplayFinder/: add_matches.py  download.py  get_drafts.py  get_info.py  load_old_teams.template  query_teams.py  redownload.py  team_parse.py  team_parse_datdota.py  team_parse_stratz.py
src/TeamReplayFinder/odota/: odota_replay.py
src/TeamReplayFinder/replay_finder/: api_usage.py  exceptions.py  league.py  match_draft.py  match_draft_odota.py  model.py  replay_process.py  team_info.py
src/replay_finder/: __init__.py  add_matches.py  query_teams.py  util.py
src/replay_finder/replay_finder/: league.py  team_info.py
tests/: conftest.py  test_league.py  test_replay_process.py
